--- a/.htaccess
+++ b/.htaccess
@@ -14,7 +14,9 @@ ExpiresByType public/purple1.jpg "access plus 1 month"
 ExpiresByType public/roman_forum.jpg "access plus 1 month"
 ExpiresByType public/ruby_game1.jpg "access plus 1 month"
 # CSS
-ExpiresByType public/css "access plus 1 month"
+ExpiresByType public/css/styles.css "access plus 1 month"
+ExpiresByType http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300|ABeeZee "access plus 1 month"
 # Javascript
-ExpiresByType js "access plus 1 year"
+ExpiresByType js/jquery-1.11.3.min.js "access plus 1 year"
+ExpiresByType js/scripts.js "access plus 1 year"
 </IfModule>
