--- a/.htaccess
+++ b/.htaccess
@@ -5,18 +5,12 @@ ExpiresActive On
 ExpiresDefault "access plus 1 month"
 
 # Images
-ExpiresByType public/artnet_auctions.png "access plus 1 month"
-ExpiresByType public/github-circle2.png "access plus 1 month"
-ExpiresByType public/navicon7.jpg "access plus 1 month"
-ExpiresByType public/pizza.png "access plus 1 month"
-ExpiresByType public/portfolio.png "access plus 1 month"
-ExpiresByType public/purple1.jpg "access plus 1 month"
-ExpiresByType public/roman_forum.jpg "access plus 1 month"
-ExpiresByType public/ruby_game1.jpg "access plus 1 month"
+ExpiresByType image/gif "access plus 1 month"
+ExpiresByType image/png "access plus 1 month"
+ExpiresByType image/jpg "access plus 1 month"
+ExpiresByType image/jpeg "access plus 1 month"
 # CSS
-ExpiresByType public/css/styles.css "access plus 1 month"
-ExpiresByType http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300|ABeeZee "access plus 1 month"
+ExpiresByType text/css "access plus 1 month"
 # Javascript
-ExpiresByType js/jquery-1.11.3.min.js "access plus 1 year"
-ExpiresByType js/scripts.js "access plus 1 year"
+ExpiresByType application/javascript "access plus 1 year"
 </IfModule>
